--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<h1> AlgebraicQuantumChemistry </h1>
-## Research of quantum chemistry through computational algebra
-## Language: Python with sympy, numpy, and other libraries. 
-## Aim: 
-### Computation of analitycal formulas of molecular integrals with GTO (Gaussian-Type Orbitals)
-### Study of electronic structures of molecule from the viewpoint of algebraic variety
+<h1> Algebraic Quantum Chemistry </h1>
+
 
